# uml2django

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
examples/: MyProject.xmi  generalMin.xmi  school_management_project.puml  test.py  test_project.puml
examples/twit/: twit.puml  twit.xmi
src/uml2django/: XmiArgoUmlTagsName.py  XmiArgoUmlTagsNames.py  __init__.py  __main__.py  argparser.py  config.py  logger.py  main.py  processDocument.py  readXmiFile.py  settings.py  templates.py
src/uml2django/cheetah_templates/app/: urls.tmpl
src/uml2django/cheetah_templates/app/forms/: ModelCreateForm.tmpl
src/uml2django/cheetah_templates/app/rest_api/: ModelSerializer.tmpl  ModelViewSet.tmpl
src/uml2django/cheetah_templates/app/templates/: template_detail.tmpl
src/uml2django/cheetah_templates/app/views/: DetailView.tmpl  ListView.tmpl
src/uml2django/cheetah_templates/custom_auth/: auth_settings.py  urls.py
src/uml2django/cheetah_templates/custom_auth/models/: WebUser.py  WebUserManager.py  __init__.py
src/uml2django/cheetah_templates/custom_auth/rest_api/serializers/: WebUserLoginSerializer.py  WebUserSignupSerializer.py  __init__.py
src/uml2django/cheetah_templates/custom_auth/rest_api/views/: LoginAPIView.py  SignupAPIView.py
src/uml2django/cheetah_templates/svelte/daisy/: daisy_layout.svelte.tmpl  tailwind.config.cjs
src/uml2django/cheetah_templates/svelte/daisy/lib/: Navbar.svelte  Navbar.svelte.tmpl  NavbarUserDropdown.svelte  NotificationAlert.svelte  NotificationsContainer.svelte  Sidebar.svelte  auth.ts  (+8 more)
src/uml2django/objects/: DjangoModel.py  DjangoModelField.py  __init__.py  find_loaded_django_models_by_app_name.py
src/uml2django/parsers/django/: configure_corsheaders.py  generate_prepare_database.py  start_django_project.py
src/uml2django/parsers/files/: file_writer.py  get_substring_between_parenthesis.py  load_data_from_puml_or_xmi.py
src/uml2django/parsers/python/: append_target_to_from_import.py
src/uml2django/parsers/settings/: find_loaded_django_model_by_xmi_id.py
src/uml2django/parsers/svelte/: generate_daisy_model_list.py  start_svelte_app.py
src/uml2django/parsers/xmi/: generate_xmi_from_puml.py  get_django_models_from_xmi_document.py  get_name_of_element.py  get_xmi_id_of_element.py  is_xmi_element_abstract.py  load_associations.py
src/uml2django/processDocument/: DjangoModel.py  DjangoModelField.py  __init__.py  add_import_to_init_file.py  configure_corsheaders.py  file_reader.py  file_writer.py  find_django_model_by_xmi_id.py  generate_prepare_database.py  generate_xmi_from_puml.py  get_django_models_from_minidom_document.py  get_xmi_association_name.py  get_xmi_id_of_element.py  is_element_abstract.py  is_valid_file.py  load_associations.py  prepend_to_file.py  read_xmi_file.py  start_django_project.py
src/uml2django/templates/: __init__.py  model.tmpl  prepare_database.tmpl  urls.tmpl
src/uml2django/templates/app/models/: Model.tmpl
src/uml2django/templates/app/rest_api/: ModelSerializer.tmpl  ModelViewSet.tmpl
src/uml2django/templates/app/templates/: template_update.tmpl
src/uml2django/templates/app/views/: DeleteView.tmpl
src/uml2django/templates/forms/: ModelCreateForm.tmpl  ModelForm.tmpl  ModelUpdateForm.tmpl
src/uml2django/templates/models/: Model.tmpl
src/uml2django/templates/rest_api/: ModelSerializer.tmpl  router.tmpl
src/uml2django/templates/templates/: template_create.tmpl  template_delete.tmpl  template_detail.tmpl  template_list.tmpl
src/uml2django/templates/tests/: ModelCreateTest.tmpl  ModelListTest.tmpl  ModelViewsTest.tmpl
src/uml2django/templates/views/: CreateView.tmpl  DeleteView.tmpl  DetailView.tmpl  ListView.tmpl  UpdateView.tmpl  create.tmpl  delete.tmpl  list.tmpl
tests/: TestCliCodeGeneration.py  TestDocumentProcessing.py  __init__.py  conftest.py  test_project.puml  test_project.xmi  test_skeleton.py  tests_main.py
(+6 files in other folders)
