[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel", "cheetah3", "django", "model_bakery"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[project]
name = "uml2django"
version = "0.0.1"
description = "Generate Django code from PlantUML class diagrams"
readme = "README.rst"
authors = [{ name = "Joao Cunha", email = "jvsdc1992@gmail.com" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "Programming Language :: Python :: 3",
]
# keywords = ["feed", "reader", "tutorial"]
dependencies = [
]
requires-python = ">=3.8.10"

[project.urls]
Homepage = "https://github.com/j-hanks/uml2django"

# [project.scripts]
# realpython = "uml2django.__main__:main"
