# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = uml2django
author = Joao Victor Soares da Cunha
author_email = jvsdc1992@gmail.com
license = NONE
license_files = LICENSE.txt
long_description = file: README.rst
url = https://github.com/J-hanks/uml2django


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src


